<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature_login.presentation.login.LoginFragment"
    android:background="@color/background_color">

     <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:contentDescription="Lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_lock"
            tools:ignore="HardcodedText" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="text"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/enter_code_background"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:inputType="textPersonName"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/et2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/enter_code_background"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:inputType="textPersonName"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/et3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/et1"
        app:layout_constraintTop_toTopOf="@id/et1"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/enter_code_background"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:inputType="textPersonName"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/et4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/et2"
        app:layout_constraintTop_toTopOf="@id/et2"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/enter_code_background"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:inputType="textPersonName"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/et3"
        app:layout_constraintTop_toTopOf="@id/et3"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_num1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/text_view_circular_background"
        android:gravity="center"
        android:text="1"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_num2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et1" />

    <TextView
        android:id="@+id/tv_num2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/text_view_circular_background"
        android:gravity="center"
        android:text="2"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_num3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_num1"
        app:layout_constraintTop_toTopOf="@id/tv_num1" />

    <TextView
        android:id="@+id/tv_num3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/text_view_circular_background"
        android:gravity="center"
        android:text="3"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_num2"
        app:layout_constraintTop_toTopOf="@id/tv_num2" />

    <TextView
        android:id="@+id/tv_num4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/text_view_circular_background"
        android:gravity="center"
        android:text="4"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_num2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_num1" />

    <TextView
        android:id="@+id/tv_num5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/text_view_circular_background"
        android:gravity="center"
        android:text="5"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_num3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_num4"
        app:layout_constraintTop_toTopOf="@id/tv_num4" />

    <TextView
        android:id="@+id/tv_num6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/text_view_circular_background"
        android:gravity="center"
        android:text="6"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_num5"
        app:layout_constraintTop_toTopOf="@id/tv_num5" />


    <TextView
        android:id="@+id/tv_num7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/text_view_circular_background"
        android:gravity="center"
        android:text="7"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_num2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_num4" />

    <TextView
        android:id="@+id/tv_num8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/text_view_circular_background"
        android:gravity="center"
        android:text="8"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_num3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_num7"
        app:layout_constraintTop_toTopOf="@id/tv_num7" />

    <TextView
        android:id="@+id/tv_num9"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/text_view_circular_background"
        android:gravity="center"
        android:text="9"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_num8"
        app:layout_constraintTop_toTopOf="@id/tv_num8" />

    <TextView
        android:id="@+id/tv_num0"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/text_view_circular_background"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_num8"
        app:layout_constraintStart_toStartOf="@+id/tv_num8"
        app:layout_constraintTop_toBottomOf="@+id/tv_num8" />

    <View
        android:id="@+id/tv_backspace"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/text_view_circular_background"
        app:layout_constraintEnd_toEndOf="@+id/tv_num9"
        app:layout_constraintStart_toStartOf="@+id/tv_num9"
        app:layout_constraintTop_toTopOf="@+id/tv_num0" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_toleft"
        app:layout_constraintTop_toTopOf="@id/tv_backspace"
        app:layout_constraintBottom_toBottomOf="@id/tv_backspace"
        app:layout_constraintStart_toStartOf="@id/tv_backspace"
        app:layout_constraintEnd_toEndOf="@id/tv_backspace"/>


</androidx.constraintlayout.widget.ConstraintLayout>